# recorder-module-3

./: .gitignore  .pdm-python  LICENSE  bot_utils.py  default_scope.json  dist.bat  enums.py  errors.py  main.py  pyproject.toml  test-tiktokapi.py  test.html  test.py  test2.html  test_tiktok_bot.py  tiktok.json  ttlr.py
recorders/: recorders.py
tiktok/: bot_utils.py  test_main.py  test_recorders.py  test_utils.py
utils/: utils.py
