[tool.pdm]
distribution = false

[tool.pdm.build]
includes = []
[project]
name = "recorder-module-3"
version = "0.1.0"
description = ""
authors = [
    {name = "pikamonvvs", email = "pikamonvvs@naver.com"},
]
dependencies = [
    "ffmpeg-python>=0.2.0",
    "requests>=2.32.3",
    "tiktokapi>=6.3.0",
    "tiktoklive>=6.0.8",
    "bs4>=0.0.2",
    "types-requests>=2.32.0.20240712",
    "loguru>=0.7.2",
    "pyinstaller>=6.9.0",
]
requires-python = "<3.13,>=3.12"
readme = "README.md"
license = {text = "MIT"}

